# agent_harness

./: CLAUDE.md  pyproject.toml
.claude/skills/run-tests/: SKILL.md
examples/: ch02_calculator.py  ch03_real_provider.py  ch04_tools.py  ch05_interruptible.py  ch05_multi_turn.py  ch05_repl.py  ch07_context_usage.py
src/harness/: __init__.py  agent.py  messages.py
src/harness/context/: accountant.py
src/harness/providers/: anthropic.py  base.py  events.py  fallback.py  local.py  mock.py  openai.py  retry.py
src/harness/tools/: base.py  decorator.py  registry.py  std.py  validation.py
tests/: test_registry.py  test_smoke.py
